# pilot-axum

./: Cargo.toml  pilot.toml
migrations/: 20231128184154_create_requests_table.sql
scripts/: init-db.sh
src/: config.rs  konst.rs  lib.rs  main.rs  shutdown.rs  startup.rs
src/controller/: error.rs  hello.rs  mod.rs  root.rs  ruok.rs
tests/: health.rs
