[package]
name = "pilot-axum"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "pilot"

[[bin]]
path = "src/main.rs"
name = "pilot"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.5", features = ["timeout", "trace", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "macros", "any", "uuid", "postgres", "migrate"]

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
